Url Shortener full task правки после ревью